--- a/.github/workflows/dotnet-core-build-flow.yml
+++ b/.github/workflows/dotnet-core-build-flow.yml
@@ -23,3 +23,11 @@ jobs:
       run: dotnet build --configuration Release --no-restore
     - name: Test
       run: dotnet test --no-restore --verbosity normal
+    
+    - name: helm plugin setup
+      run: helm plugin install https://github.com/chartmuseum/helm-push.git
+    - name: helm repo add
+      run: helm repo add chart-museum http://chartmuseum:8080
+    - name: helm push
+      run: helm push kubernetes/helm/service-a/ chart-museum
+      
