--- a/.github/workflows/dotnet-core-build-flow.yml
+++ b/.github/workflows/dotnet-core-build-flow.yml
@@ -23,7 +23,8 @@ jobs:
       run: dotnet build --configuration Release --no-restore
     - name: Test
       run: dotnet test --no-restore --verbosity normal
-    
+    - name: helm setup
+      run: curl -O https://get.helm.sh/helm-v3.3.4-linux-amd64.tar.gz && tar -zxvf helm-v3.3.4-linux-amd64.tar.gz && mv linux-amd64/helm /usr/local/bin/helm
     - name: helm plugin setup
       run: helm plugin install https://github.com/chartmuseum/helm-push.git
     - name: helm repo add
